# VIFagent

./: .gitignore  README.md  applied_plane.tex  commented_beam.tex  commented_chimpanzee.tex  commented_chimpanzee2.tex  commented_duck.tex  commented_monkey.tex  commented_plane.tex  identified.tex  modified_shark.tex  plane.tex  pyproject.toml  requirements.txt  shark.tex  ttttt.tex
extension/tikz-mapped/: CHANGELOG.md  README.md  get_mapping.sh  package-lock.json  package.json
extension/tikz-mapped/src/: extension.ts
resources/chimpanzee/: code.tex
resources/shark/: code.tex
tests/: mappin_debug.py  test_apply_instruction.py  test_comment.py  test_create_mapping.py  test_mapping.py  test_mutant_creator.py  test_random.py
tests/resources/: beam.tex  chimpanzee.tex  duck.tex  graphdate.tex  monkey.tex  plane.tex
vif_agent/: agent.py  feature.py  prompt.py  utils.py
vif_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vif_agent/mcp/: code_features.py
vif_agent/mutation/: mutant.py  tex_mutant_creator.py
vif_agent/renderer/: tex_renderer.py
vif_agent/script/: get_mappings.py
vif_agent/tools/: server.py
